--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,35 @@ nav ul li a {
   text-align: center;
 }
 
-.inicio{
-  background-color: #F5F5F5;
+.inicio {
+  background-color: white;
   color: #333;
+  padding: 20px;
+}
+
+.inicio .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.inicio .perfil {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
+
+.inicio h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.inicio p {
+  font-size: 16px;
+  margin-bottom: 20px;
 }
 
 .proyectos{
@@ -67,13 +93,22 @@ nav ul li a {
   color: #fff;
 }
 
+.proyectos h1{
+  text-align: center;
+  padding-top: 1%;
+}
+
 .habilidades{
-  background-color: #F5F5F5;
+  background-color: white;
   color: #333;
 }
 
+.habilidades .container{
+  text-align: center;
+}
+
 .contacto{
-  background-color: #F5F5F5;
+  background-color: white;
   color: #333;
 }
 
@@ -143,7 +178,7 @@ footer {
   width: 200px;
   padding: 20px;
   margin: 10px;
-  background-color: #F5F5F5;
+  background-color: #e1e1e1;
   border-radius: 4px;
   text-align: center;
 }
@@ -158,23 +193,16 @@ footer {
   border-radius: 4px;
   margin-top: 10px;
 }
+.experiencia h1{
+  text-align: center;
+  padding-top: 1%;
+}
 
-.experiencia {
-  padding: 80px 0;
+.experiencia .card-container{
+  padding: 7%;
   text-align: center;
 }
 
-.experiencia .trabajo {
-  margin-bottom: 40px;
-}
-
-.experiencia h3 {
-  margin-top: 0;
-}
-
-.experiencia p {
-  margin-bottom: 10px;
-}
 .slider{
   width: 1600px;
   max-width: 100vh;
@@ -219,7 +247,6 @@ footer {
   text-align: center;
   padding: 20px;
   box-sizing: border-box;
-  pointer-events: none; /* Evitar que la descripción capture eventos de clic */
 }
 
 .buttons{
@@ -266,4 +293,69 @@ footer {
 
 .dots li.active{
   width: 30px;
+}
+
+.card{
+  position: relative;
+  width: 370px;
+  height: 220px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 15px 35px (0,0,0,0.25);
+  display: flex;
+  flex-direction: row;
+}
+.card-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.card .poster{
+  position: relative;
+  overflow: hidden;
+
+}
+
+.card .poster::before{
+  content: '';
+  position: absolute;
+  bottom: -100px;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, #1064a6 50%, transparent);
+  transition: 0.5s;
+  z-index: 1;
+}
+.card:hover .poster::before{
+  bottom: 10px;
+}
+
+.card .poster img{
+  width: 100%;
+  transition: 0.5s;
+}
+
+.card:hover .poster img{
+  transform: translateY(-50px);
+  filter: blur(5px);
+}
+
+.card .details{
+  position: absolute;
+  bottom: -250px;
+  left: 0;
+  padding: 20px;
+  width: 100%;
+  z-index: 2;
+  transition: 0.5s;
+}
+
+.card:hover .details{
+  bottom: -20px;
+}
+
+.card .details .info{
+  color: white;
+  margin-top: 20px;
 }
